Revision history for Perl extension Email::MIME.

{{$NEXT}}

1.929     2015-02-17 09:31:35-05:00 America/New_York
        - try not to lose unrecognized content-type parameters
        - avoid copying the body content when not needed during construction

1.928     2014-12-15 21:47:49-05:00 America/New_York
        - when converting from single part to multipart, drop
          Content-Transfer-Encoding and Content-Type's charset property
        - update subparts in walk_parts if stringification changes

1.927     2014-12-04 10:19:58-05:00 America/New_York
        - add header_str_pairs; like header_pairs, but decoded
        - remove Email:MIME::Creator from synopsis

1.926     2014-01-28 23:28:41-05:00 America/New_York
        - improve EOL processing with quoted-printable (thanks, Tomohiro
          Hosaka!)
        - avoid uninitialized warnings [rt.cpan.org #91707]

1.925     2013-11-08 07:01:03 America/New_York
        - improve reliability of mail reconstruction during walk_parts (thanks,
          Tomohiro Hosaka!)

1.924     2013-08-10 23:23:55 America/New_York
          update use of Email::MIME::ContentType to match new, fixed hash keys:
          type/subtype

1.923     2013-08-08 21:59:02 America/New_York
          do not consider the part-ending CRLF part of the body

          avoid undefined warnings in debug_structure [rt.cpan.org #82388]
          (Thanks, Kurt Anderson)

          better error message when the given body is a ref but not a scalar
          ref [rt.cpan.org #59205]

1.922     2013-07-10 08:45:02 America/New_York
          repackage, fixing version number

1.921     2013-07-01 22:51:01 America/New_York
          repackage, remove PEP links, update bugtracker

1.920     2013-06-17
          do not call parts_set during walk_parts unless the parts have
          actually changed

          When trying to decode a body, fall back to 7bit if the encoding is
          unknown.  Trying to create a new body in an unknown encoding is still