@@ -1,6 +1,7 @@
 Revision history for Perl extension Email::MIME.
 
 {{$NEXT}}
+        - rely on the new header_raw methods in new Email::Simple
 
 1.929     2015-02-17 09:31:35-05:00 America/New_York
         - try not to lose unrecognized content-type parameters
